# markdown_editor

./: Cargo.toml  docker-compose.yml  init_data.sql
md_backend/: Cargo.toml  main.rs  mod.rs
md_backend/src/: main.rs
md_backend/src/users/: mod.rs
md_frontend/: .eslintrc.json  .gitignore  package.json  pnpm-lock.yaml  tsconfig.json
md_frontend/pages/: _app.tsx  index.tsx
md_frontend/src/components/MainPage/: MainPage.tsx
md_frontend/src/components/MarkdownEditor/: MarkdownEditor.tsx
md_frontend/src/context/: MarkdownContext.tsx
md_frontend/src/hooks/: useMarkdown.ts  useMarkdown.tsx
md_frontend/src/pages/: _app.tsx  index.tsx
md_frontend/src/styles/: global.css
