[package]
name = "md_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.19", features = ["macros"] }
bb8 = "0.8.1"
bb8-postgres = "0.8.1"
serde = { version = "1.0.181", features = ["derive"] }
time = { version = "0.3.25", features = [
    "serde",
    "serde-well-known",
    "local-offset",
] }
tokio = { version = "1.29.1", features = ["full"] }
tokio-postgres = { version = "0.7.8", features = ["with-time-0_3"] }
